--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# poise = "0.5.2"
-serenity = { version = "0.11.5", default-features = false, features = [
-    "client",
-    "gateway",
-    "rustls_backend",
-    "model",
-] }
+poise = "0.5.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_cbor = "0.11.2"
+# serde_json = "1.0"
 tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
 tokio-util = { version = "0.7.4", features = ["codec"] }
